# python-sysappend

./: CHANGELOG.md  Makefile  README.md  RELEASE_PROCESS.md  pyproject.toml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml
.github/workflows/: main.yml  pr_checks.yml
docs/source/: conf.py  index.md  installation.md
recursiveimport/: __init__.py  importall.py
scripts/: prepare_changelog.py  release.sh
sysappend/: __init__.py
tests/: hello_test.py
